# vd

./: Makefile  README.md  README.rst  pyproject.toml  rename_chain_drawings  setup.py  vd.py  vd2.py
vd/: __init__.py  errors.py  inventory.py  logger.py  test_vdpath.py  vd2.py  vdpath.py  vimrc
vd/iroiro/: bin_iroiro.py  bin_nowrap.py  bin_rainbow.py  lib_collections.py  lib_datetime.py  lib_html.py  lib_lang.py  lib_subproc.py  lib_tui.py  test_collections.py  test_colors_builtin.py  test_colors_color_traits.py  test_colors_colorrgb.py  test_colors_decolor.py  test_colors_emphasis.py  test_colors_nocolor.py  test_colors_paint.py  test_datetime.py  test_itertools.py  test_test_utils.py  test_threading.py  test_tui_getch.py  test_tui_menu.py  test_tui_prompt.py  test_tui_typesetting_utils.py
vd2/: __main__.py  actions.py  inventory.py  logger.py  paints.py  regex.py  testutils.py  utils.py  vd2.py  vdpath.py  vimrc
vd2/iroiro/: __init__.py  lib_itertools.py  lib_test_utils.py  lib_threading.py  lib_tui.py  test_bin_iroiro.py  test_colors_color256.py  test_colors_colorhsv.py  test_colors_facade.py  test_colors_gradient.py  test_html.py  test_tui_pager.py
vdir/: __init__.py  __main__.py  actions.py  inventory.py  vdir.py  vdpath.py  vimrc
vdir/iroiro/: lib_colors.py  lib_math.py  test_colors_color8.py  test_math.py  test_subproc.py  test_tui_key.py  test_tui_spinner.py
