[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "vd"
dynamic = ["version"]
authors = [
  { name="Cychih", email="michael66230@gmail.com" },
]
description = "My Python implementation of vidir"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]


[tool.hatch.version]
path = "vd/__init__.py"


[project.scripts]
vd = "vd:main"


[project.urls]
Homepage = "https://github.com/pi314/vd"


[tool.coverage.run]
branch = true
source = ["vd/"]
command_line = "-m unittest --verbose"


[tool.coverage.report]
omit = [
    "test_*.py",
    "__init__.py",
    "__main__.py",
    ]
