[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "vdir"
dynamic = ["version"]
authors = [
  { name="Cychih", email="michael66230@gmail.com" },
]
description = "Edit directory with vim"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]


[tool.hatch.version]
path = "vdir/version.py"


[project.scripts]
vdir = "vdir:main"


[project.urls]
Homepage = "https://github.com/pi314/vdir"


[tool.coverage.run]
branch = true
source = ["vdir/"]
command_line = "-m unittest --verbose"


[tool.coverage.report]
omit = [
    "test_*.py",
    "__init__.py",
    "__main__.py",
    ]
